testsuite/tests/grammar/invalid_list/common.lkt
import lexer_example

@abstract
class FooNode implements Node[FooNode] {
}
